@@ -66,11 +66,6 @@ macro(configure_definitions)
     add_definitions(-DSYNERGY_PRODUCT_NAME="${PRODUCT_NAME}")
   endif()
 
-  if(SHOW_DEV_THANKS)
-    message(STATUS "Enabling dev thanks message")
-    add_definitions(-DSYNERGY_SHOW_DEV_THANKS=1)
-  endif()
-
   if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
     message(STATUS "Disabling debug build")
     add_definitions(-DNDEBUG)
@@ -150,10 +145,6 @@ macro(configure_options)
     set(DEFAULT_ENABLE_COVERAGE ON)
   endif()
 
-  if("$ENV{SYNERGY_SHOW_DEV_THANKS}" STREQUAL "false")
-    set(DEFAULT_SHOW_DEV_THANKS OFF)
-  endif()
-
   option(BUILD_GUI "Build GUI" ${DEFAULT_BUILD_GUI})
   option(BUILD_INSTALLER "Build installer" ${DEFAULT_BUILD_INSTALLER})
   option(BUILD_TESTS "Build tests" ${DEFAULT_BUILD_TESTS})
@@ -161,6 +152,5 @@ macro(configure_options)
   option(ENABLE_ACTIVATION "Enable activation" ${DEFAULT_ENABLE_ACTIVATION})
   option(LICENSED_PRODUCT "Show licensing info" ${DEFAULT_LICENSED_PRODUCT})
   option(ENABLE_COVERAGE "Enable test coverage" ${DEFAULT_ENABLE_COVERAGE})
-  option(SHOW_DEV_THANKS "Show dev thanks message" ${DEFAULT_SHOW_DEV_THANKS})
 
 endmacro()
